--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <div class="div-img">
                             <img src="./img/frango_yin_yang.png" alt="">
                         </div>     
-                        <h2 class="h2-titulocomida">Frango Yin Yang</h2>              
+                        <h2 data-test="item-name" class="h2-titulocomida">Frango Yin Yang</h2>              
                         <p class="p-subtitulo">Um pouco de batata, um pouco de salada</p> 
                         <p  data-test="item-price" class="p-preco">R$ 15,00</p>
 
@@ -45,7 +45,7 @@
                         <div class="div-img">
                             <img src="./img/frango_yin_yang.png" alt="">
                         </div>     
-                        <h2 class="h2-titulocomida">Frango Yin Yang</h2>              
+                        <h2  data-test="item-name" class="h2-titulocomida">Frango Yin Yang</h2>              
                         <p class="p-subtitulo">Um pouco de batata, um pouco de salada</p> 
                         <p  data-test="item-price" class="p-preco">R$ 17,00</p>
 
@@ -61,7 +61,7 @@
                         <div class="div-img">
                             <img src="./img/frango_yin_yang.png" alt="">
                         </div>     
-                        <h2 class="h2-titulocomida">Frango Yin Yang</h2>              
+                        <h2 data-test="item-name" class="h2-titulocomida">Frango Yin Yang</h2>              
                         <p class="p-subtitulo">Um pouco de batata, um pouco de salada</p> 
                         <p  data-test="item-price" class="p-preco">R$ 16,00</p>
 
@@ -84,7 +84,7 @@
                         <div class="div-img">
                             <img src="./img/coca-cola.png" alt="">
                         </div>     
-                        <h2 class="h2-tituloBebida">Coquinha gelada</h2>              
+                        <h2  data-test="item-name" class="h2-tituloBebida">Coquinha gelada</h2>              
                         <p class="p-subtitulo">Lata 350ml</p> 
                         <p  data-test="item-price" class="p-preco">R$ 4,00</p>
                         <svg class="svg-icon icon-hidden" width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -97,7 +97,7 @@
                         <div class="div-img">
                             <img src="./img/coca-cola.png" alt="">
                         </div>     
-                        <h2 class="h2-tituloBebida">Coquinha gelada</h2>              
+                        <h2 data-test="item-name" class="h2-tituloBebida">Coquinha gelada</h2>              
                         <p class="p-subtitulo">Lata 350ml</p> 
                         <p  data-test="item-price" class="p-preco">R$ 5,00</p>
                         <svg class="svg-icon icon-hidden" width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -110,7 +110,7 @@
                         <div class="div-img">
                             <img src="./img/coca-cola.png" alt="">
                         </div>     
-                        <h2 class="h2-tituloBebida">Coquinha gelada</h2>              
+                        <h2 data-test="item-name" class="h2-tituloBebida">Coquinha gelada</h2>              
                         <p class="p-subtitulo">Lata 350ml</p> 
                         <p  data-test="item-price" class="p-preco">R$ 6,00</p>
                         <svg class="svg-icon icon-hidden" width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -128,7 +128,7 @@
                         <div class="div-img">
                             <img src="./img/pudim.png" alt="">
                         </div>     
-                        <h2 class="h2-tituloSobremesa">Pudim</h2>              
+                        <h2 data-test="item-name" class="h2-tituloSobremesa">Pudim</h2>              
                         <p class="p-subtitulo">Apenas pudim</p> 
                         <p  data-test="item-price" class="p-preco">R$ 7,00</p>
                         <svg class="svg-icon icon-hidden" width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -141,7 +141,7 @@
                         <div class="div-img">
                             <img src="./img/pudim.png" alt="">
                         </div>     
-                        <h2 class="h2-tituloSobremesa">Pudim</h2>              
+                        <h2 data-test="item-name" class="h2-tituloSobremesa">Pudim</h2>              
                         <p class="p-subtitulo">Apenas pudim</p> 
                         <p data-test="item-price" class="p-preco">R$ 8,00</p>
                         <svg class="svg-icon icon-hidden" width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -154,7 +154,7 @@
                         <div class="div-img">
                             <img src="./img/pudim.png" alt="">
                         </div>     
-                        <h2 class="h2-tituloSobremesa">Pudim</h2>              
+                        <h2 data-test="item-name" class="h2-tituloSobremesa">Pudim</h2>              
                         <p class="p-subtitulo">Apenas pudim</p> 
                         <p data-test="item-price" class="p-preco">R$ 9,00</p>
                         <svg class="svg-icon icon-hidden" width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
