--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             </article>
        
 
-            <footer class="footer">
+            <footer class="4">
                 <button data-test="order-btn" class="btnPedir" id="btnPedir" onclick="fecharPedido()">Selecione os 3 itens para fechar o pedido</button>
             </footer>
         </div> <!--fim  do container-->
