adicionando novas funcionalidades
adicionando a sessão overlay, para finalizar melhor os pedidos e revisar a compra

--- a/index.html
+++ b/index.html
@@ -12,6 +12,33 @@
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
+    <div class="overlay icon-hidden">
+        <div class="confirmar-pedido">
+            <div class="titulo">Confirme  seu pedido.</div>
+            <ul>
+                <li class="prato">
+                    <div class="nome-prato">teste</div>
+                    <div class="valor-prato">123</div>
+                </li>
+                <li class="bebida">
+                    <div class="nome-bebida">teste</div>
+                    <div class="valor-bebida">123</div>
+                </li>
+                <li class="sobremesa">
+                    <div class="nome-sobremesa">teste</div>
+                    <div class="valor-sobremesa">123</div>
+                </li>
+                <li class="total">
+                    <div class="totalTittle">Total</div>
+                    <div class="valorTotal">123</div>
+                </li>
+                <li>
+                    <button class="btnConfirmarPedido">OK! Pode pedir</button>
+                </li>
+            </ul>
+
+        </div>
+    </div>
     <div id="main">
 
         <div class="top">
