--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-    <div class="overlay icon-hidden">
+    <!--<div class="overlay icon-hidden">
         <div class="confirmar-pedido">
             <div class="titulo">Confirme  seu pedido.</div>
             <ul>
@@ -38,7 +38,7 @@
             </ul>
 
         </div>
-    </div>
+    </div> -->
     <div id="main">
 
         <div class="top">
